--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 	tools:context="com.vinaya.blecentralrole.MainActivity">
 
 	<ListView
-		android:id="@+id/list_view_peripherals"
+		android:id="@+id/listViewPeripherals"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:fastScrollAlwaysVisible="false"
