--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="match_parent"
 			  android:layout_height="32pt"
-			  android:orientation="horizontal">
+				>
 
 	<ImageView
 		android:id="@+id/imageViewIcon"
@@ -12,15 +12,20 @@
 		android:layout_centerVertical="true"
 		android:scaleType="centerInside"
 		android:src="@drawable/icon"
-		android:layout_margin="5px"></ImageView>
+		android:layout_margin="5px"
+		></ImageView>
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical"
-		android:layout_gravity="center_vertical"
 		android:gravity="center_vertical"
-		android:layout_margin="15px">
+		android:id="@+id/linearLayout"
+		android:layout_marginTop="15px"
+		android:layout_marginBottom="15px"
+		android:layout_toEndOf="@+id/imageViewIcon"
+		android:layout_toStartOf="@+id/textViewRssi"
+		>
 
 		<TextView
 			android:id="@+id/textViewDevName"
@@ -35,5 +40,16 @@
 			android:layout_height="wrap_content"
 			android:text="abc00001-1234-5678-1234-abcd0123abcd"
 			android:singleLine="true"/>
+
 	</LinearLayout>
-</LinearLayout>
+
+	<TextView
+		android:id="@+id/textViewRssi"
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		android:text="123"
+		android:gravity="center_vertical"
+		android:textSize="32dp"
+		android:layout_alignParentEnd="true"/>
+
+</RelativeLayout>
