--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,15 +28,18 @@
 		android:layout_height="wrap_content"
 		android:editable="false"
 		android:singleLine="false"
-		android:lines="7"
+		android:lines="6"
 		android:layout_above="@+id/buttonDisconnect"
 		android:layout_alignParentStart="true"
-		android:minHeight="20dp"/>
+		android:minHeight="12dp"
+		android:background="@drawable/edit_text_style"
+		/>
 
 	<Button
 		android:id="@+id/buttonDisconnect"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:text="@string/btn_disconnect"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentStart="true"/>
 
