--- a/app/src/main/res/values/logic.xml
+++ b/app/src/main/res/values/logic.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<integer name="rssi_threshold">-65</integer>
+	<integer name="scan_period">2000</integer>
 </resources>
